--- a/package/lib/flutter_services.yaml
+++ b/package/lib/flutter_services.yaml
@@ -1,2 +1,3 @@
-- name: "firebase::Firebase"
-- ios-framework: "ios/libFirebase.dylib"
+services:
+  - name: "firebase::Firebase"
+    ios-framework: "ios/libFirebase.dylib"
